--- a/src/less/hamburger.less
+++ b/src/less/hamburger.less
@@ -7,7 +7,7 @@
  */
  ._setHamburger(){
     width: 100%;
-    height: 4px;
+    height: 2px;
     background-color: @chuckgreen-da;
     border-radius: 4px;
     position: absolute;
@@ -45,7 +45,7 @@
 // button > span
 .hamburger-box {
     width: 40px;
-    height: 24px;
+    height: 22px;
     display: inline-block;
     position: relative;
 
